# Not-the-worst-DB-in-the-world

./: .gitignore  DB.drawio  README.md
A0/Main/Qunit/headers/: QUnit.h
A0/Main/Stack/headers/: Stack.h
A0/Main/StackTest/source/: StackQUnit.cc
A1/: README.md
A1/Main/BufferMgr/headers/: MyDB_BufferManager.h  MyDB_Clock.h  MyDB_PageHandle.h
A2/: README  log.txt
A2/Main/: CMakeLists.txt
A2/Main/Catalog/headers/: MyDB_AttType.h  MyDB_Catalog.h  MyDB_Table.h
A2/Main/Catalog/source/: MyDB_Catalog.cc  MyDB_Schema.cc  MyDB_Table.cc
A2/Main/DatabaseTable/headers/: MyDB_PageReaderWriter.h  MyDB_TableReaderWriter.h
A2/Main/DatabaseTable/source/: MyDB_PageReaderWriter.cc  MyDB_TableReaderWriter.cc
A2/Main/Record/headers/: MyDB_AttVal.h
A2/Main/Record/source/: MyDB_AttVal.cc  MyDB_Record.cc
A2/Main/RecordTest/source/: RecordQUnit.cc  RecordQUnitBase.cc
A3/Main/: CMakeLists.txt
A3/Main/Record/: CMakeLists.txt
A4/: README.md
A4/Main/: CMakeLists.txt
A4/Main/BPlusTest/source/: test.cc
A4/Main/DatabaseTable/headers/: MyDB_BPlusTreeReaderWriter.h
A4/Main/DatabaseTable/source/: MyDB_BPlusTreeReaderWriter.cc
A5/: README.md  Test-3.sql
A5/Main/: CMakeLists.txt
A6/Main/: CMakeLists.txt
A6/Main/BufferMgr/: CMakeLists.txt
A6/Main/BufferMgr/headers/: MyDB_BufferManager.h
A6/Main/BufferMgr/source/: MyDB_BufferManager.cc
A6/Main/Catalog/: CMakeLists.txt
A6/Main/Record/headers/: MyDB_Record.h
A6/Main/Record/source/: MyDB_Record.cc
A6/Main/RelOpTest/source/: RelOpQUnit.cc
A6/Main/RelOps/: CMakeLists.txt
A6/Main/RelOps/headers/: Aggregate.h  BPlusSelection.h  RegularSelection.h  SortMergeJoin.h
A6/Main/RelOps/source/: Aggregate.cc  BPlusSelection.cc  RegularSelection.cc  ScanJoin.cc  SortMergeJoin.cc
A6/Main/SQL/: CMakeLists.txt
A6/Main/SQL/source/: Lexer.c  Parser.c  Parser.h
A7/Main/: CMakeLists.txt
A7/Main/DatabaseTable/: CMakeLists.txt
A7/Main/Execution/: CMakeLists.txt
A7/Main/Execution/headers/: SFWQuery.h
A7/Main/Execution/source/: SFWQuery.cc
(+15 files in other folders)
